[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yarastorm"
version = "0.0.1"
description = "The yarastorm Python package"
readme = "README.md"
requires-python = ">=3.11"

# Fill in dependencies here.
dependencies = []

[[project.authors]]
name = "John Gorman"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/gormaniac/yarastorm"
Documentation = "https://gormo.co/yarastorm/"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
